# DiceVenture

./: Cargo.toml
.cargo/: config.toml
assets/blocks/: BoardWalkBlock.glb  PalmTreeTrunkBlock.glb  RockBlock.glb  SandBlockTest.glb
assets/characters/: BaseCharacter.glb
assets/shaders/: noise.wgsl  water.wgsl  water_shader.wgsl  water_shader_test.wgsl
src/: constants.rs  lib.rs  main.rs
src/attacks/: base_attack.rs  core.rs  counter.rs  cut_through.rs  dagger_throw.rs  mod.rs
src/components/: character.rs  enemy.rs  grid.rs  humanoid.rs  island.rs  island_maps.rs  mod.rs  overworld.rs  player.rs  ui.rs
src/game_objects/: enemy.rs  grid.rs  humanoid.rs  player.rs
src/islands/: atoll.rs  core.rs  islandTemplate.rs  mod.rs
src/objects/: enemy.rs  grid.rs  humanoid.rs  mod.rs  overworld.rs  player.rs
src/plugins/: animations.rs  attack.rs  camera.rs  damage_numbers.rs  enemy.rs  enemy_aggression.rs  enemy_behaviour.rs  enemy_movement.rs  humanoid.rs  island.rs  island_controls.rs  mod.rs  network.rs  network_plugin.rs  overworld.rs  player.rs  projectiles.rs  ship.rs  ui.rs
src/preludes/: humanoid_preludes.rs  mod.rs  network_preludes.rs
