[package]
name = "dice_venture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.2", features = ["dynamic_linking", "file_watcher"] }
bevy_replicon = "0.32.1"
bevy_replicon_renet = "0.9.0"
clap = { version = "4.5.24", features = ["derive"] }
dolly = "0.6.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
serde = "1.0.209"
mint = "0.5"
noise = "0.9"
rand = "0.9.0"
rand_chacha = "0.9.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
